_generated-doc/2.2/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.generation]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.generation[quarkus.hibernate-orm.database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.generation.create-schemas[quarkus.hibernate-orm.database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.database.generation.halt-on-error[quarkus.hibernate-orm.database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.generation]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.generation[quarkus.hibernate-orm."persistence-unit-name".database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas[quarkus.hibernate-orm."persistence-unit-name".database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-database_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error[quarkus.hibernate-orm."persistence-unit-name".database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.
--|boolean 
|`false`

|===